[package]
name = "grom-bot-get-new-pairs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-recursion = "1.1.0"
async-std = "1.12.0"
chrono = "0.4.38"
dotenv = "0.15.0"
futures = "0.3.30"
lazy_static = "1.4.0"
reqwest = {version = "0.12.3", features = ["json"]}
serde_json = "1.0.115"
solana-client = "1.18.11"
solana-program = "1.18.11"
solana-sdk = "1.18.11"
tokio = "1.37.0"
