[package]
name = "solwatcher"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.82"
async-recursion = "1.1.0"
async-std = "1.12.0"
chrono = "0.4.38"
dotenv = "0.15.0"
futures = "0.3.30"
lazy_static = "1.4.0"
reqwest = {version = "0.12.12", features = ["json"]}
serde_json = "1.0.115"
solana-client = "2.1.13"
solana-program = "2.1.13"
solana-sdk = "2.1.13"
tokio = "1.37.0"
