[package]
name = "solwatcher"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"


[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
dotenv = "0.15.0"
futures = "0.3.30"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.115"
solana-client = "3.1"
solana-commitment-config = "3.1"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time"] }
